MSS-1564[Add thumbnails to PDP]-icons-aligned-&fixed-icon-regression-in-IE

--- a/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/components/_carousel.scss
+++ b/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/components/_carousel.scss
@@ -34,10 +34,10 @@
         
         .slick-arrow {
             &.slick-prev {
-                left: rem(21);
+                left: rem(19);
             }
             &.slick-next {
-                right: rem(21);
+                right: rem(19);
             }
         }
     }
